# space-battle

./: Cargo.toml  Makefile.toml
.github/workflows/: ci.yml  release.yml
src/: boids.rs  capital_ships.rs  fps_overlay.rs  lasers.rs  lifetimes.rs  main.rs  ships.rs  spawners.rs
