[package]
name = "space-battle"
version = "0.1.0"
edition = "2021"

[features]
default =["dev_mode"]
dev_mode = ["bevy/bevy_dev_tools"]

[dependencies]
rand = "0.8.5"
bevy = { version = "0.15.0-rc.3", features = ["wayland"] }
bevy_dev_tools = { version = "0.15.0-rc.3" }
bevy_dylib = { version = "0.15.0-rc.3" }
